# RelationRior

./: .gitignore  README.md  evaluate.py  graph_server.py  kg_matcher.py  kgqa_plugin.py  plug.py  pyproject.toml  pyrightconfig.json  sys_prompt.py
config/: stage_prompts.py  streamlined_prompts.py  subagent_prompts.py  subagent_prompts.py.bak
docs/: agent_logic_summary.md  backend_branching.md  gte_planning_redesign.md  inference_runtime.md  local_qwen35_test.md  online_glm_flash_test.md  relation_prior_pipeline_v3.md
prompts/: ARCHITECTURE.md  edge_cases.md  edge_cases_v2.md  layer1_schema.json  layer1_system.txt  layer1_system_v2.txt  layer1_user_template.txt  layer1_user_v2.txt  layer2_design.md  layer2_gte_resolution.py  layer3_system.txt  layer3_system_v2.txt  layer3_user_template.txt  layer3_user_v2.txt
scripts/: agent35_4_ablation_test.json  agent35_4_e2e_test.json  agent3_test.json  analyze_action_space_patterns.py  analyze_correct_action_space_strategy.py  analyze_filter_effectiveness.py  analyze_filter_strategy_need.py  analyze_relation_connectivity_backend_like.py  analyze_skill_action_space_guidance.py  analyze_skill_answer_strategy_alignment.py  analyze_skill_topk_backend_like.py  analyze_stage_attribution.py  build_case_skills.py  build_full_train_case_skills.py  chat_llm.py  compare_prompt_variants.sh  compare_test_runs.py  diag_entity_route_decompose.py  diag_gte_full_retrieve.py  diag_gte_recall.py  diag_gte_subq_retrieve.py  diag_gte_topk_detail.py  diag_llm_query_gte.py  diagnostic_free_bfs.py  diagnostic_l2_cvt.py  diagnostic_l2_skip.py  (+69 more)
(+81 files in other folders)
